# SchemaSync

./: Cargo.toml  README.md  cargo.toml  output.glue
schema_sync/: Cargo.toml
schema_sync/src/: config.rs  error.rs  lib.rs  main.rs  test.rs
schema_sync/src/db/: connection.rs  executor.rs  migrations.rs  mod.rs  registry.rs
schema_sync/src/models/: mod.rs  registry.rs
schema_sync/src/schema/: analyzer.rs  diff.rs  generator.rs  mod.rs  types.rs
schema_sync/src/utils/: logging.rs  mod.rs  naming.rs
schema_sync_macros/: Cargo.toml  cargo.toml
schema_sync_macros/src/: lib.rs
