[package]
name = "schema_sync"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A reverse-ORM for Rust that verifies and updates database schemas from structs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/schema_sync"
keywords = ["database", "orm", "schema", "migrations", "sqlx"]
categories = ["database"]
readme = "README.md"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite", "macros", "json", "chrono", "uuid"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
regex = "1.10"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
futures = "0.3"
glob = "0.3"
once_cell = "1.19"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
walkdir = "2.4"
indexmap = { version = "2.2", features = ["serde"] }
Inflector = "0.11.4"
md5 = "0.7.0"
schema_sync_macros = { version = "0.1.0", path = "../schema_sync_macros" }
serde_yaml = { version = "0.9.33" }

[lib]
name = "schema_sync"
path = "src/lib.rs"

[[bin]]
name = "schema_sync"
path = "src/main.rs"

[dev-dependencies]
rstest = "0.18"
tempfile = "3.10"
pretty_assertions = "1.4"
